# WMx-Automation-Script

./: .gitignore  README.md  automate.ps1  automate.py  baxtest.py  convert.txt  convertHAR.py  gotest.py  log.txt  log2.txt  pyproject.toml
Notes/: notes.html  notes.txt  responses.txt
Resources/: OB EOD Open Tote Report Mar 2022.xlsx:Zone.Identifier  closing141.har  closing151.har  loadmanagementmobile.har  masterc.har  order.har  otr.xlsx  saveloadID.har  totes.xlsx  wave.har
src/: automate.ps1  automate.py  baxtest.py  cli.py  convertHAR.py  gotest.py
src/wmx/: __init__.py  __main__.py  automate.py  config.toml
